--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@ Developed by IXA NLP Group of the University of the Basque Country (ixa.si.ehu.e
 		<maven>3.0</maven>
 	</prerequisites>
 	<repositories>
+		<repository>
+			<id>ixa-ehu.kaflib</id>
+			<url>https://raw.github.com/ixa-ehu/kaflib-mvn-repo/master</url>
+			<snapshots>
+				<enabled>true</enabled>
+			    	<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -45,6 +53,11 @@ Developed by IXA NLP Group of the University of the Basque Country (ixa.si.ehu.e
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>ixa.kaflib</groupId>
+			<artifactId>kaflib</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
